// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
  output   = "../src/generated/prisma"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id            String    @id
  name          String
  email         String
  emailVerified Boolean
  image         String?
  phone         String?
  createdAt     DateTime
  updatedAt     DateTime
  sessions      Session[]
  accounts      Account[]
  studio        Studio?
  orders        Order[]

  @@unique([email])
  @@map("user")
}

model Session {
  id        String   @id
  expiresAt DateTime
  token     String
  createdAt DateTime
  updatedAt DateTime
  ipAddress String?
  userAgent String?
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([token])
  @@map("session")
}

model Account {
  id                    String    @id
  accountId             String
  providerId            String
  userId                String
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  accessToken           String?
  refreshToken          String?
  idToken               String?
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?
  password              String?
  createdAt             DateTime
  updatedAt             DateTime

  @@map("account")
}

model Verification {
  id         String    @id
  identifier String
  value      String
  expiresAt  DateTime
  createdAt  DateTime?
  updatedAt  DateTime?

  @@map("verification")
}

model Studio {
  id          String  @id @default(cuid())
  name        String  @unique
  description String?
  image       String?
  banner      String?
  email       String
  phoneNumber String
  username    String  @unique

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  userId String @unique
  user   User   @relation(fields: [userId], references: [id], onDelete: Cascade)

  categories Category[]
  locations  Location[]
  packages   Package[]
  orders     Order[]
}

model Location {
  id      String  @id @default(cuid())
  name    String
  address String
  link    String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  studioId String
  studio   Studio @relation(fields: [studioId], references: [id], onDelete: Cascade)

  packages Package[]
  orders   Order[]

  @@unique([studioId, name])
}

model Category {
  id          String  @id @default(cuid())
  name        String  @unique
  description String?
  image       String?

  studioId String
  studio   Studio @relation(fields: [studioId], references: [id], onDelete: Cascade)

  packages Package[]

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@unique([studioId, name])
}

model Package {
  id          String  @id @default(cuid())
  name        String
  description String?
  price       Int
  image       String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  studioId String
  studio   Studio @relation(fields: [studioId], references: [id], onDelete: Cascade)

  categoryId String
  category   Category @relation(fields: [categoryId], references: [id], onDelete: Cascade)

  locations Location[]
  orders    Order[]
}

enum OrderStatus {
  PENDING
  PROCESSING
  SUCCESS
  CANCEL
  REFUNDED
}

enum PaymentStatus {
  PENDING
  SUCCESS
}

model Order {
  id            String        @id @default(cuid())
  customerName  String
  email         String
  phoneNumber   String
  date          DateTime
  result        String?
  status        OrderStatus   @default(PENDING)
  paymentStatus PaymentStatus @default(PENDING)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  userId String?
  user   User?   @relation(fields: [userId], references: [id], onDelete: SetNull)

  studioId String?
  studio   Studio? @relation(fields: [studioId], references: [id], onDelete: SetNull)

  packageId String?
  package   Package? @relation(fields: [packageId], references: [id], onDelete: SetNull)

  locationId String?
  location   Location? @relation(fields: [locationId], references: [id], onDelete: SetNull)

  studioName         String
  packageName        String
  packageDescription String?
  packagePrice       Int
  packageImage       String?
  locationName       String
  locationAddress    String
}
